option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "ClientRMProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "yarn_service_protos.proto";






service ClientRMProtocolService {
  rpc getNewApplicationId (GetNewApplicationIdRequestProto) returns (GetNewApplicationIdResponseProto);
  rpc getApplicationMaster (GetApplicationMasterRequestProto) returns (GetApplicationMasterResponseProto);
  rpc submitApplication (SubmitApplicationRequestProto) returns (SubmitApplicationResponseProto);
  rpc finishApplication (FinishApplicationRequestProto) returns (FinishApplicationResponseProto);
  rpc getClusterMetrics (GetClusterMetricsRequestProto) returns (GetClusterMetricsResponseProto);
}

